--- a/views/home.ejs
+++ b/views/home.ejs
@@ -35,6 +35,7 @@
         <a class="btn btn-light btn-lg" href="/auth/google" role="button"><i class="fab fa-google"><b>oogle</b></i></a>
         <a class="btn btn-dark btn-lg" href="/auth/twitter" role="button"><i class="fab fa-twitter"><b>witter</b></i></a>
         <a class="btn btn-light btn-lg" href="/auth/facebook" role="button"><i class="fab fa-facebook-f"><b>acebook</b></i></a>
+        <a class="btn btn-light btn-lg" href="/URL" role="button"><b>4iQ</b></a>
       </center>
     </div>
   </div>
